--- a/src/styles/addStudentForm.css
+++ b/src/styles/addStudentForm.css
@@ -44,7 +44,6 @@
     font-family: 'Helvetica Neue';
     font-weight: 700;
     width: 150px;
-    height: 55px;
     position: relative;
     top: 10px;
     animation-name: slide;
@@ -60,24 +59,23 @@
 }
 
 #btn-return{
-    background-image: linear-gradient(rgb(177, 96, 96), var(--burnt-umber),rgb(177, 96, 96));
-    color: var(--buff);
-    border: rgba(196, 97, 97, 0.296) 3px solid;
-    box-shadow:4px 4px 4px black;
-    text-shadow: 1px 2px 2px black;
-    font-size: 15px;
-    font-family: 'Helvetica Neue';
-    font-weight: 700;
-    width: 300px;
-    height: 55px;
-    position: relative;
-    animation-name: slide;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: forwards;
-    transition: 500ms ease-in-out;
-    position: relative;
-    top: 40px;
+    background-image: linear-gradient(rgb(177, 96, 96), var(--burnt-umber), rgb(177, 96, 96));
+        color: var(--buff);
+        border: rgba(196, 97, 97, 0.296) 3px solid;
+        box-shadow: 4px 4px 4px black;
+        text-shadow: 1px 2px 2px black;
+        font-size: 15px;
+        font-family: 'Helvetica Neue';
+        font-weight: 700;
+        width: 300px;
+        height: 55px;
+        position: relative;
+        animation-name: slide;
+        animation-duration: 1s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+        transition: 500ms ease-in-out;
+        position: relative;
 }
 
 #btn-return:hover{
